apps/tools/webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: tools
  labels:
    app: webtop
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: webtop
